<?xml version="1.0" encoding="utf-8"?>

<merge xmlns:android="http://schemas.android.com/apk/res/android">

    <SurfaceView 
        android:id="@+id/preview_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent" 
        />

    <edu.xjtlu.mobilewebservices.view.ViewfinderView
        android:id="@+id/viewfinder_view" 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/transparent"/>
    
    <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        
        <LinearLayout   
          android:orientation="vertical"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="15dp"
          android:layout_marginTop="80dp" >

          <Button 
               android:layout_width="90dp"
               android:layout_height="50dp"
               android:layout_marginTop="10dp"
               android:id="@+id/manual"
               android:text="@string/manual" />
           
          <Button 
               android:layout_width="90dp"
               android:layout_height="50dp"
               android:layout_marginTop="10dp"
               android:id="@+id/voice"
               android:text="@string/voice" />
           
          <Button 
               android:layout_width="90dp"
               android:layout_height="50dp"
               android:layout_marginTop="10dp"
               android:id="@+id/cancel"
               android:text="@string/cancel" />
           
       </LinearLayout>
        
       <LinearLayout       
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="50dp"
        android:orientation="vertical">
      
        <TextView 
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:id="@+id/textResult"
          android:text="@string/hello" />
       </LinearLayout>
       
       <LinearLayout 
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="50dp"
        android:orientation="vertical">
       
        <Button 
          android:text="@string/search"
          android:id="@+id/search"
          android:layout_width="wrap_content"
          android:layout_height="wrap_content"
          android:layout_marginLeft="200dp"
          android:layout_marginTop="90dp"
          android:visibility="gone" />
       </LinearLayout>
      
       

    </LinearLayout>
   
</merge>